# pipeflow

./: README.md  operators.py  publish.yml  pyproject.toml  stream.py  test_pipeflow.py
.github/workflows/: publish.yml
src/pipeflow/: __init__.py
