[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pipeflow"
version = "0.1.0"
description = "Readable, lazy data-transformation pipelines for Python — no more nested function calls."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Sheheryar", email = "thesheheryaahmad767@gmail.com" }]
requires-python = ">=3.8"
keywords = ["pipeline", "functional", "stream", "pipe", "data", "transformation", "iterable", "lazy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = []   # zero runtime dependencies

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "mypy",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/Sheheryar-byte/pipeflow"
Documentation = "https://github.com/Sheheryar-byte/pipeflow#readme"
Issues = "https://github.com/Sheheryar-byte/pipeflow/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pipeflow"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
